# zkvm-benchmarks-raiko

./: .gitignore  Cargo.toml  README.md  download_blocks.py  eva.sh  eval.sh  eval_lita.sh  install.sh  sweep.py
benchmarks/fibonacci/: Cargo.toml
benchmarks/fibonacci-jolt/src/: main.rs
benchmarks/fibonacci/src/: main.rs
benchmarks/loop/: Cargo.toml
benchmarks/loop-jolt/src/: lib.rs
benchmarks/loop/src/: main.rs
benchmarks/raiko-risc0/: Cargo.toml
benchmarks/raiko-risc0-builder/: Cargo.toml
benchmarks/raiko-risc0-builder/src/: main.rs
benchmarks/raiko-risc0/elf/: raiko_risc0.rs
benchmarks/raiko-risc0/src/: main.rs  zk_op.rs
benchmarks/raiko-sp1/: Cargo.toml
benchmarks/raiko-sp1-builder/: Cargo.toml
benchmarks/raiko-sp1-builder/src/: main.rs
benchmarks/raiko-sp1/elf/: raiko-sp1-aggregation
benchmarks/raiko-sp1/src/: main.rs
benchmarks/reth-risc0/: Cargo.toml
benchmarks/reth-risc0/guest/: Cargo.toml
benchmarks/reth-risc0/guest/src/: main.rs
benchmarks/reth-risc0/src/: main.rs
benchmarks/reth-sp1/: Cargo.toml
benchmarks/reth-sp1/src/: main.rs
benchmarks/tendermint-jolt/: Cargo.toml
benchmarks/tendermint-jolt/src/: lib.rs  main.rs
benchmarks/tendermint-risc0/: Cargo.toml
benchmarks/tendermint-sp1/: Cargo.toml
block-downloader/: Cargo.toml
block-downloader/src/: error.rs  host.rs  lib.rs  main.rs  rpc.rs
eval/: Cargo.toml  build.rs
eval/blocks-taiko_surge_dev/: 10.json  109.json  74.json  95.json  ecrecover_100M.json  ecrecover_10M.json  ecrecover_150M.json  ecrecover_1M.json  ecrecover_200M.json  ecrecover_300M.json  ecrecover_400M.json  ecrecover_50M.json  ecrecover_550M.json  keccak256_100M.json  keccak256_10M.json  keccak256_1M.json  keccak256_200M.json  keccak256_300M.json  keccak256_400M.json  keccak256_50M.json  keccak256_550M.json
eval/blocks-taiko_taiko_a7/: 10.json
eval/src/: jolt.rs  main.rs  nexus.rs  risc0.rs  sp1.rs  sp1_taiko.rs  types.rs  utils.rs
raiko-block-downloader/: Cargo.toml
raiko-block-downloader/config/: chain_spec_lists.json
raiko-block-downloader/src/: interfaces.rs  main.rs
raiko-block-downloader/src/preflight/: mod.rs  util.rs
raiko-block-downloader/src/provider/: db.rs  mod.rs  rpc.rs
raiko-lib/: Cargo.toml
raiko-lib/config/: config.json  config.taiko_hekla.json
raiko-lib/src/: consts.rs
raiko-pipeline/: Cargo.toml
reth-client/: Cargo.toml
reth-client/src/: custom.rs  db.rs  error.rs  io.rs  lib.rs  mpt.rs  state.rs
