[workspace]
members = [
    "block-downloader",
    "eval",
    "raiko-block-downloader",
    "benchmarks/raiko-sp1-builder"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
raiko-lib = { git = "https://github.com/NethermindEth/raiko-proof-aggregation", branch = "zkvm-benchmarks-surge", features = ["std", "sp1"] }

anyhow = "1.0.95"
bincode = "1.3.3"
clap = { version = "4.5.3", features = ["derive"] }
eyre = "0.6.12"
rsp-client-executor = { git = "https://github.com/succinctlabs/rsp/", rev = "249b34e" }
rsp-host-executor = { git = "https://github.com/succinctlabs/rsp/", rev = "249b34e" }
serde = { version = "1.0", default-features = false, features = ["derive"] }
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "2.5.4"

# Alloy
alloy-rlp = { version = "0.3.4", default-features = false }
alloy-rlp-derive = { version = "0.3.4", default-features = false }
alloy-sol-types = { version = "0.7.2", default-features = false }
alloy-eips = { version = "0.1", default-features = false, features = ["serde"] }
alloy-primitives = { version = "0.7.2", default-features = false }
alloy-rpc-types = { version = "0.1", default-features = false }
alloy-transport-http = { version = "0.1", default-features = false, features = [
    "reqwest",
] }
alloy-consensus = { version = "0.1", default-features = false, features = [
    "serde",
] }
alloy-network = { version = "0.1", default-features = false, features = [
    "k256",
] }
alloy-rpc-client = { version = "0.1", default-features = false }
alloy-provider = { version = "0.3", default-features = false, features = [
    "reqwest",
    "reqwest-rustls-tls"
] }

# SP1
# TODO(alex): Replace with v4.0.1 and check for differences
sp1-sdk = { git = "https://github.com/NethermindEth/sp1.git", branch = "v4.0.1-single-gpu", features = ["cuda"] }
sp1-prover = { git = "https://github.com/NethermindEth/sp1.git", branch = "v4.0.1-single-gpu" }
sp1-zkvm = { git = "https://github.com/NethermindEth/sp1.git", branch = "v4.0.1-single-gpu" }
sp1-helper = { git = "https://github.com/NethermindEth/sp1.git", branch = "v4.0.1-single-gpu" }
sp1-cuda = { git = "https://github.com/NethermindEth/sp1.git", branch = "v4.0.1-single-gpu" }
sp1-stark = { git = "https://github.com/NethermindEth/sp1.git", branch = "v4.0.1-single-gpu" }

# Raiko: Reth
reth-primitives = { git = "https://github.com/taikoxyz/taiko-reth.git", branch = "v1.0.0-rc.2-taiko", default-features = false, features = [
    "alloy-compat",
    "taiko",
    "k256",
] }
reth-evm-ethereum = { git = "https://github.com/taikoxyz/taiko-reth.git", branch = "v1.0.0-rc.2-taiko", default-features = false }
reth-evm = { git = "https://github.com/taikoxyz/taiko-reth.git", branch = "v1.0.0-rc.2-taiko", default-features = false }
reth-rpc-types = { git = "https://github.com/taikoxyz/taiko-reth.git", branch = "v1.0.0-rc.2-taiko", default-features = false }
reth-revm = { git = "https://github.com/taikoxyz/taiko-reth.git", branch = "v1.0.0-rc.2-taiko", default-features = false }
reth-chainspec = { git = "https://github.com/taikoxyz/taiko-reth.git", branch = "v1.0.0-rc.2-taiko", default-features = false, features = [
    "taiko",
] }
reth-provider = { git = "https://github.com/taikoxyz/taiko-reth.git", branch = "v1.0.0-rc.2-taiko", default-features = false }

# Raiko: other
kzg = { package = "rust-kzg-zkcrypto", git = "https://github.com/ceciliaz030/rust-kzg.git", branch = "brecht/sp1-patch", default-features = false }
kzg_traits = { package = "kzg", git = "https://github.com/ceciliaz030/rust-kzg.git", branch = "brecht/sp1-patch", default-features = false }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde_with = { version = "3.0" }
hex = { version = "0.4.3" }
thiserror-no-std = "2.0.2"
thiserror = { version = "1.0" }


[patch.crates-io]
# Patches needed for Raiko
revm = { git = "https://github.com/taikoxyz/revm.git", branch = "v36-taiko" }
revm-primitives = { git = "https://github.com/taikoxyz/revm.git", branch = "v36-taiko" }
revm-precompile = { git = "https://github.com/taikoxyz/revm.git", branch = "v36-taiko" }
secp256k1 = { git = "https://github.com/CeciliaZ030/rust-secp256k1", branch = "sp1-patch" }
blst = { git = "https://github.com/CeciliaZ030/blst.git", branch = "v0.3.12-serialize" }
alloy-serde = { git = "https://github.com/CeciliaZ030/alloy.git", branch = "v0.1.4-fix" }

[profile.dev]
opt-level = 3

[profile.dev.build-override]
opt-level = 3

[profile.release]
opt-level = 3
lto = true

[profile.fast]
inherits = "release"
debug = true
debug-assertions = true

[profile.release.build-override]
opt-level = 3
