[package]
name = "block-downloader"
version.workspace = true
edition.workspace = true

[dependencies]
alloy-provider.workspace = true
bincode.workspace = true
clap.workspace = true
eyre.workspace = true
rsp-client-executor.workspace = true
rsp-host-executor = { git = "https://github.com/succinctlabs/rsp/", rev = "94f9740" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
