[package]
name = "zkvm-benchmarks-eval"
version.workspace = true
edition.workspace = true

[build-dependencies]
vergen-git2 = { version = "1.0.0", features = ["build"] }

[dependencies]
alloy-provider.workspace = true
bincode.workspace = true
serde_json.workspace = true
clap.workspace = true
csv = "1.3.1"
eyre.workspace = true
serde.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
url.workspace = true

# workspace
reth-client.workspace = true

# zk
risc0-zkvm = { version = "1.2.2", features = ["prove"], optional = true }

sp1-cuda = { version = "4.0.1", optional = true }
sp1-prover = {version = "4.0.1", optional = true }
sp1-sdk = {version = "4.0.1", optional = true }
sp1-stark = {version = "4.0.1", optional = true }

[features]
cuda = ["dep:sp1-cuda", "risc0-zkvm?/cuda"]
risc0 = ["dep:risc0-zkvm"]
sp1 = ["dep:sp1-prover", "dep:sp1-sdk", "dep:sp1-stark"]
