[package]
name = "zkvm-benchmarks-eval"
version.workspace = true
edition.workspace = true

[dependencies]
bincode.workspace = true
clap.workspace = true
csv = "1.3.1"
eyre.workspace = true
serde.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true

# workspace
rsp-client-executor.workspace = true
raiko-lib.workspace = true

# risc0
risc0-zkvm = { version = "1.2.2", features = ["prove", "unstable"], optional = true }

# sp1
sp1-cuda = { workspace = true, optional = true }
sp1-prover = { workspace = true, optional = true }
sp1-sdk = { workspace = true, optional = true }
sp1-stark = { workspace = true, optional = true }

# jolt
jolt-sdk = { git = "https://github.com/a16z/jolt", features = ["host"], optional = true }
fibonacci = { package = "fibonacci-jolt", path = "../benchmarks/fibonacci-jolt", optional = true }
loop-j = { package = "loop-jolt", path = "../benchmarks/loop-jolt", optional = true }
tendermint-j = { package = "tendermint-jolt", path = "../benchmarks/tendermint-jolt", optional = true }

# nexus
nexus-sdk = { git = "https://github.com/nexus-xyz/nexus-zkvm.git", version = "0.2.4", optional = true }

# raiko
reth-primitives = { git = "https://github.com/taikoxyz/taiko-reth.git", branch = "v1.0.0-rc.2-taiko", default-features = false, features = [
    "alloy-compat",
    "taiko",
] }
anyhow = { workspace = true }
serde_json = "1.0.138"

[build-dependencies]
vergen-git2 = { version = "1.0.0", features = ["build"] }

[features]
cuda = ["dep:sp1-cuda", "risc0-zkvm?/cuda"]
risc0 = ["dep:risc0-zkvm"]
sp1 = ["dep:sp1-prover", "dep:sp1-sdk", "dep:sp1-stark"]
jolt = ["dep:jolt-sdk", "dep:fibonacci", "dep:loop-j", "dep:tendermint-j"]
nexus = ["dep:nexus-sdk"]
