[package]
name = "raiko-block-downloader"
version.workspace = true
edition.workspace = true

[dependencies]
# raiko
raiko-lib = { workspace = true }
raiko-core = { git = "https://github.com/NethermindEth/raiko-proof-aggregation", branch = "zkvm-benchmarks" }

# alloy
alloy-primitives = { workspace = true }
alloy-rpc-types = { workspace = true }

# tracing and logging
tracing = { workspace = true }
tracing-subscriber.workspace = true

# errors
anyhow = { workspace = true }

# serde
serde = { workspace = true }
serde_json = { workspace = true }

# async
tokio = { workspace = true }

# cli
clap = { workspace = true }
