# This crate was taken from Raiko with minimal changes - only dependencies were adjusted to decouple from workspace.

[package]
name = "raiko-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
# reth
reth-primitives = { git = "https://github.com/taikoxyz/taiko-reth.git", branch = "v1.0.0-rc.2-taiko", default-features = false, features = [
    "alloy-compat",
    "taiko",
    "k256",
] }
reth-evm-ethereum = { git = "https://github.com/taikoxyz/taiko-reth.git", branch = "v1.0.0-rc.2-taiko", default-features = false }
reth-evm = { git = "https://github.com/taikoxyz/taiko-reth.git", branch = "v1.0.0-rc.2-taiko", default-features = false }
reth-chainspec = { git = "https://github.com/taikoxyz/taiko-reth.git", branch = "v1.0.0-rc.2-taiko", default-features = false, features = [
    "taiko",
] }

# alloy
alloy-rlp = { version = "0.3.4", default-features = false }
alloy-eips = { version = "0.1", default-features = false, features = ["serde"] }
alloy-rlp-derive = { version = "0.3.4", default-features = false }
alloy-sol-types = { version = "0.7.2", default-features = false }
alloy-primitives = { version = "0.7.2", default-features = false }
alloy-rpc-types = { version = "0.1", default-features = false }
alloy-consensus = { version = "0.1", default-features = false, features = [
    "serde",
] }

# errors
anyhow = { workspace = true }
thiserror-no-std = "2.0.2"
thiserror = { version = "1.0", optional = true }

# serde
serde = { workspace = true }
serde_json = { version = "1.0", default-features = false, features = ["alloc"], optional = true }
serde_with = { version = "3.0", optional = true }

libflate = { version = "2.0.0" }
once_cell = "1.8.0"
url = { workspace = true }
hex = { version = "0.4.3" }
kzg = { package = "rust-kzg-zkcrypto", git = "https://github.com/ceciliaz030/rust-kzg.git", branch = "brecht/sp1-patch", default-features = false }
kzg_traits = { package = "kzg", git = "https://github.com/ceciliaz030/rust-kzg.git", branch = "brecht/sp1-patch", default-features = false }
sha2 = "0.10.8"
rlp = { version = "0.5.2", features = ["std"] }

# docs
utoipa = { version = "4.2.0", features = ["axum_extras"] }

# misc
cfg-if = "1.0.0"
tracing = { workspace = true }
bincode = { workspace = true }
async-trait = "0.1.80"

# [target.'cfg(feature = "std")'.dependencies]
flate2 = { version = "1.0.28", optional = true }
log = { version = "0.4.13", optional = true }
tokio = { workspace = true, optional = true }
chrono = { version = "0.4", default-features = false, optional = true }
lazy_static = "1.4.0"

[dev-dependencies]
hex-literal = "0.4"

[features]
default = ["std"]
std = [
  # always use no-std for revm since we use hashbrown in workspace
  # "revm/std",
  "dep:thiserror",
  "anyhow/std",
  "dep:chrono",
  "dep:flate2",
  "dep:log",
  "dep:serde_json",
  "dep:serde_with",
  # "dep:tokio",
]
sgx = []
sp1 = []
risc0 = []
sp1-cycle-tracker = []
