# This crate was taken from Raiko with minimal changes - only dependencies were adjusted to decouple from workspace.

[package]
name = "raiko-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
# reth
reth-primitives = { workspace = true }
reth-evm-ethereum = { workspace = true }
reth-evm = { workspace = true }
reth-chainspec = { workspace = true }

# alloy
alloy-rlp = { workspace = true }
alloy-eips = { workspace = true }
alloy-rlp-derive = { workspace = true }
alloy-sol-types = { workspace = true }
alloy-primitives = { workspace = true }
alloy-rpc-types = { workspace = true }
alloy-consensus = { workspace = true }

# errors
anyhow = { workspace = true }
thiserror-no-std = { workspace = true }
thiserror = { workspace = true, optional = true }

# serde
serde = { workspace = true }
serde_json = { workspace = true, optional = true }
serde_with = { workspace = true, optional = true }

libflate = { version = "2.0.0" }
once_cell = "1.8.0"
url = { workspace = true }
hex = { workspace = true }
kzg = { workspace = true }
kzg_traits = { workspace = true }
sha2 = "0.10.8"
rlp = { version = "0.5.2", features = ["std"] }

# docs
utoipa = { version = "4.2.0", features = ["axum_extras"] }

# misc
cfg-if = "1.0.0"
tracing = { workspace = true }
bincode = { workspace = true }
async-trait = "0.1.80"

# [target.'cfg(feature = "std")'.dependencies]
flate2 = { version = "1.0.28", optional = true }
log = { version = "0.4.13", optional = true }
tokio = { workspace = true, optional = true }
chrono = { version = "0.4", default-features = false, optional = true }
lazy_static = "1.4.0"

[dev-dependencies]
hex-literal = "0.4"

[features]
default = ["std"]
std = [
  # always use no-std for revm since we use hashbrown in workspace
  # "revm/std",
  "dep:thiserror",
  "anyhow/std",
  "dep:chrono",
  "dep:flate2",
  "dep:log",
  "dep:serde_json",
  "dep:serde_with",
  # "dep:tokio",
]
sgx = []
sp1 = []
risc0 = []
sp1-cycle-tracker = []
