[package]
name = "reth-client"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives = { version = "0.8.18", default-features = false }
alloy-rlp = "0.3.10"
anyhow = "1.0.95"
eyre = "0.6.12"
itertools = "0.14.0"
reth-chainspec = { git = "https://github.com/risc0/reth", branch = "p1.1.0_zstd", default-features = false }
reth-ethereum-consensus = { git = "https://github.com/risc0/reth", branch = "p1.1.0_zstd", default-features = false }
reth-evm = { git = "https://github.com/risc0/reth", branch = "p1.1.0_zstd", default-features = false }
reth-evm-ethereum = { git = "https://github.com/risc0/reth", branch = "p1.1.0_zstd"}
reth-primitives = { git = "https://github.com/risc0/reth", branch = "p1.1.0_zstd", default-features = false, features = ["alloy-compat", "std"] }
reth-trie = { git = "https://github.com/risc0/reth", branch = "p1.1.0_zstd", default-features = false }
reth-trie-common = { git = "https://github.com/risc0/reth", branch = "p1.1.0_zstd", default-features = false }
revm = { version ="14.0.0", default-features = false }
revm-primitives = { version = "9.0.0", default-features = false, features = ["serde", "std"] }
rlp = "0.6.1"
serde = { version = "1.0.217", default-features = false, features = ["derive"] }
thiserror = "2.0.11"
