 [package]
name = "reth-client"
version.workspace = true
edition.workspace = true

[dependencies]
thiserror.workspace = true
serde_json.workspace = true
serde.workspace = true
tokio.workspace = true
rlp.workspace = true

# reth
reth-consensus.workspace = true
reth-ethereum-consensus.workspace = true
reth-execution-types.workspace = true
reth-primitives.workspace = true
reth-storage-errors.workspace = true
reth-trie.workspace = true
reth-evm.workspace = true
reth-evm-ethereum.workspace = true
reth-errors.workspace = true
reth-chainspec.workspace = true
reth-revm.workspace = true

# revm
revm.workspace = true
revm-primitives.workspace = true

# alloy
alloy-primitives.workspace = true
alloy-rlp.workspace = true
itertools.workspace = true

[dev-dependencies]
