# This crate was taken from Raiko and adjusted with values appropriate to benchmarking file names and dir structure.

[package]
name = "raiko-sp1-builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raiko-pipeline = { git = "https://github.com/NethermindEth/raiko-proof-aggregation", branch = "zkvm-benchmarks", features = ["sp1"] }

[features]
test = []
bench = []
