[workspace]
[package]
version = "0.1.0"
name = "tendermint-risc0"
edition = "2021"

[dependencies]
risc0-zkvm = { version = "1.2.2", default-features = false, features = ["std", "unstable"] }

serde = { version = "1.0.204", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
tendermint = { version = "=0.40.1", default-features = false }
tendermint-light-client-verifier = { version = "=0.40.1", default-features = false, features = [
    "rust-crypto",
] }

[patch.crates-io]
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.5-risczero.0" }
ed25519-consensus = { git = "https://github.com/risc0/ed25519-consensus", rev = "8a6d26d1fcd377f9322ba83d3732d04c157e4778" }


[features]
risc0 = []
