[workspace]
[package]
name = "reth-risc0"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm = { version = "1.2.1", default-features = false, features = ["std", "unstable"] }
risc0-zkvm-platform = { version = "1.2.1", default-features = false, features = ["sys-getenv"] }
c-kzg = { version = "=1.0.3", features = ["risc0-ffi"] }

reth-client = { path = "../../../reth-client" }
serde_json = "1.0.94"

[patch.crates-io]
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.5-risczero.0" }
k256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "k256/v0.13.4-risczero.1" }
tiny-keccak = { git = "https://github.com/risc0/tiny-keccak", tag = "tiny-keccak/v2.0.2-risczero.0" }
c-kzg = { git = "https://github.com/risc0/c-kzg-4844.git", branch = "p1.0.3" }

[features]
risc0 = []
